# pydantic-persistence

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: create-gh-release.yml  release.yml  tests.yml
docs/: conf.py  index.rst  reference.rst
examples/: jsonfs_example.py  jsonlocal_example.py
prismatic_package/: __init__.py  main.py
pydantic_persistence/: __init__.py  base.py  exceptions.py
pydantic_persistence/backend/: json_local.py  jsonfs.py
pydantic_persitence/: __init__.py  base.py  exceptions.py  main.py
pydantic_persitence/backend/: jsonfs.py
tests/: basic_models.py  test_auto.py  test_model.py  test_prismatic_package.py  test_pydantic_persitence.py
tests/backends/jsonfs/: test_jsonfs.py
