[tool.poetry]
name = "prismatic-package"
version = "1.0.0"
description = ""
authors = ["Benoit Chabord <benoit.chabord@prismaticdigital.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/prismaticd/prismatic-package"
repository = "https://github.com/prismaticd/prismatic-package"
documentation = "https://prismatic-package.readthedocs.io"


[tool.poetry.dependencies]
python = ">=3.7,<4.0'"
click = "^7.1.1"
requests = {version = "^2.23.0", optional = true}
pjson = {version = "^1.1", optional = true}

[tool.poetry.extras]
my_ip = ["requests", "pjson"]

[tool.poetry.dev-dependencies]
pytest = "^6.1"
coverage = {extras = ["toml"], version = "^5.0.1"}
pytest-cov = "^2.8.1"
pytest-mock = "^3.0.0"
flake8 = "^3.7.9"
black = "^20.8b1"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.1.2"
flake8-bandit = "^2.1.2"
safety = "^1.8.5"
mypy = "^0.782"
flake8-annotations = "^2.0.0"
typeguard = "^2.7.1"
flake8-docstrings = "^1.5.0"
darglint = "^1.1.2"
xdoctest = "^0.15.0"
sphinx = "^3.0.1"
sphinx-autodoc-typehints = "^1.10.3"
codecov = "^2.0.15"
nox = "^2020.8.22"
bump2version = "^1.0.0"
isort = "^5.5.3"
pre-commit = "^2.7.1"

[tool.poetry.scripts]
prismatic-package = "prismatic_package.main:cli"

[tool.coverage.paths]
source = ["prismatic_package", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["prismatic_package"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.black]
line-length = 120
target-version=["py37", ]
include = '\.pyi?$'
# see help text for default exclude
exclude = '''/(
    # black defaults from --help (see also https://github.com/ambv/black#configuration-format )
      \.git
    | \.hg
    | \.mypy_cache
    | \.nox
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist

    # project specific exclusions
    | node_modules
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
